# dual-arm-assembler

./: .gitignore  NOTICE  README.md  package.xml  setup.cfg  setup.py
docs/: mesh2urdf.md  tools.md
dual_arm_assembler/: __init__.py  app.py  cli.py  composer.py  mesh2urdf.py  part_registry.py  paths.py
dual_arm_assembler/configs/: dual.py  single.py
models/: README.md
models/base/: box_base.urdf
models/endeffector/: onrobot_rg6.yaml
models/torso/: column_torso.urdf  column_torso.yaml  tbar_torso.urdf  tbar_torso.yaml
scripts/: setup_vendor_models.sh
urdf/rg2/: onrobot_rg2_macro.xacro  onrobot_rg2_standalone.urdf.xacro
